# resonate-oxide

./: ;  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml  rust.yml
src/: build.rs  main.rs
src/backend/: audio.rs  database.rs  database_interface.rs  database_manager.rs  error.rs  filemanager.rs  fm.rs  lyrics.rs  mediacontrol.rs  mod.rs  music.rs  rpc.rs  settings.rs  spotify.rs  sql.rs  thumbnail.rs  util.rs  web.rs
src/frontend/: application.rs  backend_interface.rs  import_page.rs  message.rs  mod.rs  playlist_page.rs  playlists.rs  search_page.rs  settings_page.rs  tray.rs  widgets.rs
src/frontend/assets/: mod.rs
src/frontend/assets/icons/: icon.icns  repeat_gray.svgbd
src/frontend/assets/icons/icon.iconset/: icon_128-0
src/frontend/message/: lyric.rs  mod.rs
src/frontend/pages/: import_page.rs  mod.rs  playlist_page.rs  playlists_page.rs  search_page.rs  settings_page.rs
