[package]
name = "resonate_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
directories = "6.0.0"
essi-ffmpeg = "0.2.0"
iced = { version = "0.13.1", features = ["tokio", "image", "advanced", "svg"] }
iced_toasts = "0.1.0"
image = "0.25.6"
rusqlite = { version = "0.34.0", features = ["bundled"] }
tokio = { version = "1.44.1", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["downloader-native-tls", "tokio"] }
