[package]
name = "resonate_v2"
version = "0.1.3"
edition = "2021"

[dependencies]
dotenvy = "*"
rspotify = "*"
anyhow = "1.0.98"
async-channel = "2.3.1"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
essi-ffmpeg = "0.2.0"
iced = { version = "0.13.1", features = ["tokio", "image", "advanced", "svg"] }
iced_toasts = "0.1.0"
image = "0.25.6"
rand = "0.9.1"
rodio = "0.20.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
tokio = { version = "1.44.1", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["downloader-native-tls", "tokio"] }
webbrowser = "*"
rust_fm = "0.1.3"
